--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,9 @@ html {
 }
 
 .nav-link {
-  @apply relative flex h-[38px] items-center px-4 text-base font-bold leading-normal text-white underline decoration-transparent underline-offset-4 cursor-pointer;
+  @apply relative flex h-[38px] items-center px-4 font-bold text-white underline decoration-transparent underline-offset-4 cursor-pointer;
+  @apply text-[32px] md:text-base leading-[34px] md:leading-[17px];
+  @apply hover:decoration-white/50 hover:underline-offset-[6px];
   @apply transition-all duration-300 ease-in-out;
   font-family: var(--font-heebo);
 
