--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@ html {
   scroll-behavior: smooth;
   font-family: var(--font-arimo);
   line-height: 20px;
+  overflow-x: hidden;
 }
 
 .font-arimo {
